--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="true" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a><a class="dropdown-item" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">BULK ORDERS</a></div></li><li class="nav-item"><a class="nav-link link" href="http://www.nyw.io/viewer/vbid-67ff0-ojqdlra3" aria-expanded="false">ADMIN</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">HOME</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="       " aria-expanded="true">WELCOME</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#header2-2">A SHORT INTRO</a><a class="dropdown-item" href="index.html#header6-3">MORE ABOUT US</a></div></li><li class="nav-item dropdown"><a class="nav-link link" href="index.html#header3-11" aria-expanded="false">GALLERY</a></li><li class="nav-item"><a class="nav-link link" href="index.html#contacts3-w" aria-expanded="false">CONTACTUS</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header3-e" aria-expanded="false">PRODUCTS</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="index.html#header3-i" aria-expanded="false" data-toggle="dropdown-submenu">OUR SHOWROOM</a><div class="dropdown-menu"><a class="dropdown-item" href="index.html#msg-box8-v">SPECIAL OFFERS</a><a class="dropdown-item" href="http://srivadivelanstoresourshowroom.tk/" target="_blank">OUR SHOWROOM DETAILS</a><a class="dropdown-item" href="index.html#header3-i">ADVANTAGES OF OUR SHOWROOM</a><a class="dropdown-item" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">BULK ORDERS</a></div></li><li class="nav-item"><a class="nav-link link" href="http://www.nyw.io/viewer/vbid-67ff0-ojqdlra3" aria-expanded="false">ADMIN</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-danger-outline btn-danger" href="#top">தமிழ்</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
@@ -623,7 +623,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Lowest Price</h3>
-        <div class="lead"><p>Since we are the manufacturers of brass vessels, we offer brass products at very lowest. Apart from brass, we offer all items at wholesale price</p></div>
+        <div class="lead"><p>Since we are the manufacturers of brass vessels, we offer brass products at very lowest price. Apart from brass, we offer all items at wholesale price</p></div>
     </div>
 
 </section>
@@ -635,7 +635,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Quality Products</h3>
-        <div class="lead"><p>Sri Vadivelan Stores always gives important preference ro quality. We always offer quality products to our valuable customers which lasts for a long time</p></div>
+        <div class="lead"><p>Sri Vadivelan Stores always gives important preference to quality. We always offer quality products to our valuable customers which lasts for a long time</p></div>
     </div>
 
 </section>
@@ -900,7 +900,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="dB697aMkNT0AAC7FVQrRaTD4xeldCc62ooFEgWQ2c8MRvE+KuzejylOWG+lx7XVJeUgYSGAhiic2LvjqZz2hP5WIS0p6O0bY3AIF18BJyPCfctwz7Om8n3kGpHr8R0v8" data-form-email="true">
+                    <input type="hidden" value="U0anmQSIdd0mnw88RNLzRS+SAJxVLmoAtcK9PgQ/dz1qTrYGaJBDxRRdcQHhKxTWGTMvlLPk26DZ2RbsXI+scEbuZFE1YFvG44/9180pHEET7B3lbx3GPvFNwZZR8G3+" data-form-email="true">
 
                     
 
