--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Generator</a></section><section class="mbr-slider mbr-section mbr-section__container carousel slide mbr-section-nopadding mbr-after-navbar" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider3-c">
     <div>
         <div>
             <div>
                 <ol class="carousel-indicators">
-                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="8"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="9"></li>
+                    <li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="0" class="active"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="1"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="2"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="3"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="4"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="5"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="6"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="7"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="8"></li><li data-app-prevent-settings="" data-target="#slider3-c" data-slide-to="9"></li><li data-app-prevent-settings="" data-target="#slider3-c" class="" data-slide-to="10"></li>
                 </ol>
                 <div class="carousel-inner" role="listbox">
                     <div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full active" data-bg-video-slide="false" style="background-image: url(assets/images/quality-banner1-2000x693.jpg);">
@@ -214,6 +214,21 @@
                                         <p class="mbr-section-lead lead">We undertake bulk orders for personal and business needs. We provide LIVE TRACKING SYSTEM for your bulk orders</p>
 
                                         <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href="http://www.nyw.io/viewer/vbid-c0183-88pawerm">GET STARTED</a> </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div><div class="mbr-section mbr-section-hero carousel-item dark center mbr-section-full" data-bg-video-slide="false" style="background-image: url(assets/images/mbr-2.jpg);">
+                        <div class="mbr-table-cell">
+                            <div class="mbr-overlay"></div>
+                            <div class="container-slide container">
+                                
+                                <div class="row">
+                                    <div class="col-md-8 col-md-offset-2 text-xs-center">
+                                        <h2 class="mbr-section-title display-1">SERVICE STATUS</h2>
+                                        <p class="mbr-section-lead lead">Have you given any product for service at Sri Vadivelan Stores. You can track the status of your product's service by providing your SRN (Service Reference Number)</p>
+
+                                        <div class="mbr-section-btn"><a class="btn btn-lg btn-success" href=" ">TRACK YOUR SERVICE</a> </div>
                                     </div>
                                 </div>
                             </div>
@@ -900,7 +915,7 @@
 
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
 
-                    <input type="hidden" value="U0anmQSIdd0mnw88RNLzRS+SAJxVLmoAtcK9PgQ/dz1qTrYGaJBDxRRdcQHhKxTWGTMvlLPk26DZ2RbsXI+scEbuZFE1YFvG44/9180pHEET7B3lbx3GPvFNwZZR8G3+" data-form-email="true">
+                    <input type="hidden" value="x7Ir/FPtZxAuGfZ1MuAd3ORQAq1qW02x/e77cCl77nmW99Aaf1B4gqQBPrZzp/dS8P5csYyLdAm7lPUtbrzMeuEKupYcZDSjEmHNIwZl7KN8xGd5Qugivoo4+3eGbDMp" data-form-email="true">
 
                     
 
